🚀 refactor: Refactor code in CollTest.java
ℹ️ Refactored code in CollTest.java to use built-in methods removeFirst() and removeLast() instead of remove(0) and remove(lists.size() - 1) for better readability and efficiency.

See the changes made in the code for more details.